WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
122461
REGRESSION (
r155607
): Javascript site does not load visually on panerabread.com
https://bugs.webkit.org/show_bug.cgi?id=122461
Summary
REGRESSION (r155607): Javascript site does not load visually on panerabread.com
alan
Reported
2013-10-07 12:14:46 PDT
1. Go to
http://marketing.panerabread.com/liveconsciouslyeatdeliciously/#!antibioticfree
2. The music plays but there's no visuals.
Attachments
Patch
(24.46 KB, patch)
2013-10-10 06:22 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2013-10-07 12:15:20 PDT
<
rdar://problem/15083665
>
alan
Comment 2
2013-10-07 12:18:05 PDT
It happens because
r155607
does not update the RenderLayer's internal hierarchy and layers end up with wrong ordering.
alan
Comment 3
2013-10-09 11:57:19 PDT
patch is coming up soon. I just need to figure out how to make a regression testcase for this.
alan
Comment 4
2013-10-10 06:22:36 PDT
Created
attachment 213879
[details]
Patch
WebKit Commit Bot
Comment 5
2013-10-11 01:34:06 PDT
Comment on
attachment 213879
[details]
Patch Clearing flags on attachment: 213879 Committed
r157296
: <
http://trac.webkit.org/changeset/157296
>
WebKit Commit Bot
Comment 6
2013-10-11 01:34:08 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug