Source/WebCore/rendering/RenderLayer.cpp
@@ -1159,22 +1159,19 @@ void RenderLayer::updateDescendantDependentFlags(HashSet<const RenderObject*>* o
 }
 
 #if USE(ACCELERATED_COMPOSITING)
-// Return true if clipping change requires layer update.
-bool RenderLayer::updateDescendantClippingContext(bool addClipping)
+// Return true if the new clipping behaviour requires layer update.
+bool RenderLayer::checkIfDescendantClippingContextNeedsUpdate(bool isClipping)
 {
-    bool layerNeedsRebuild = false;
     for (RenderLayer* child = firstChild(); child; child = child->nextSibling()) {
         RenderLayerBacking* backing = child->backing();
-        // Update layer context when new clipping is added or existing clipping is removed.
-        if (backing && (addClipping || backing->hasAncestorClippingLayer())) {
-            if (backing->updateAncestorClippingLayer(compositor().clippedByAncestor(*child)))
-                layerNeedsRebuild = true;
-        }
+        // Layer subtree needs update when new clipping is added or existing clipping is removed.
+        if (backing && (isClipping || backing->hasAncestorClippingLayer()))
+            return true;
 
-        if (child->updateDescendantClippingContext(addClipping))
-            layerNeedsRebuild = true;
+        if (child->checkIfDescendantClippingContextNeedsUpdate(isClipping))
+            return true;
     }
-    return layerNeedsRebuild;
+    return false;
 }
 #endif
 
@@ -6252,7 +6249,7 @@ void RenderLayer::styleChanged(StyleDifference, const RenderStyle* oldStyle)
         bool wasClipping = oldStyle->hasClip() || oldStyle->overflowX() != OVISIBLE || oldStyle->overflowY() != OVISIBLE;
         bool isClipping = style->hasClip() || style->overflowX() != OVISIBLE || style->overflowY() != OVISIBLE;
         if (isClipping != wasClipping) {
-            if (updateDescendantClippingContext(isClipping))
+            if (checkIfDescendantClippingContextNeedsUpdate(isClipping))
                 compositor().setCompositingLayersNeedRebuild();
         }
     }
