Source/WebCore/rendering/RenderLayerBacking.h
@@ -201,9 +201,6 @@ public:
     void setBlendMode(BlendMode);
 #endif
 
-    // Update the current layer's clipping context, when ancestor's clipping behaviour changes.
-    bool updateAncestorClippingLayer(bool needsAncestorClip);
-
 private:
     void createPrimaryGraphicsLayer();
     void destroyGraphicsLayers();
@@ -216,6 +213,7 @@ private:
     RenderLayerCompositor& compositor() const { return m_owningLayer->compositor(); }
 
     void updateInternalHierarchy();
+    bool updateAncestorClippingLayer(bool needsAncestorClip);
     bool updateDescendantClippingLayer(bool needsDescendantClip);
     bool updateOverflowControlsLayers(bool needsHorizontalScrollbarLayer, bool needsVerticalScrollbarLayer, bool needsScrollCornerLayer);
     bool updateForegroundLayer(bool needsForegroundLayer);
